--- a/index.html
+++ b/index.html
@@ -201,60 +201,55 @@ s0.parentNode.insertBefore(s1,s0);
         <div class="widget-content">
             <div id="weather" class="tab-panel active">
                 <div class="weather-search">
-                    <input type="text" placeholder="Enter a City or Zip Code">
+                    <input type="text" placeholder="Search for cities">
                 </div>
                 <div class="current-weather">
-                    <h3 class="city-state">City Name, State</h3>
-                    <p>Chance of rain: <span class="rain-chance">--%</span></p>
-                    <p><span class="temperature">--</span><span class="celsius">°C</span>/<span class="fahrenheit">°F</span></p>
+                    <h3 class="city-state">Madrid</h3>
+                    <p>Chance of rain: <span class="rain-chance">0%</span></p>
+                    <p><span class="temperature">31</span>°</p>
+                    <div class="weather-icon large">{Icon}</div>
                 </div>
                 <div class="today-forecast">
-                    <h4>Today's Forecast</h4>
+                    <h4>TODAY'S FORECAST</h4>
                     <div class="forecast-times">
                         <div class="forecast-item">
-                            <span class="time">6 AM</span>
+                            <span class="time">6:00 AM</span>
                             <div class="weather-icon">{Icon}</div>
-                            <span class="conditions">Conditions</span>
-                            <span class="temp">--<span class="celsius">°C</span>/<span class="fahrenheit">°F</span></span>
+                            <span class="temp">25°</span>
                         </div>
                         <div class="forecast-item">
-                            <span class="time">9 AM</span>
+                            <span class="time">9:00 AM</span>
                             <div class="weather-icon">{Icon}</div>
-                            <span class="conditions">Conditions</span>
-                            <span class="temp">--<span class="celsius">°C</span>/<span class="fahrenheit">°F</span></span>
+                            <span class="temp">28°</span>
                         </div>
                         <div class="forecast-item">
-                            <span class="time">12 PM</span>
+                            <span class="time">12:00 PM</span>
                             <div class="weather-icon">{Icon}</div>
-                            <span class="conditions">Conditions</span>
-                            <span class="temp">--<span class="celsius">°C</span>/<span class="fahrenheit">°F</span></span>
+                            <span class="temp">33°</span>
                         </div>
                         <div class="forecast-item">
-                            <span class="time">3 PM</span>
+                            <span class="time">3:00 PM</span>
                             <div class="weather-icon">{Icon}</div>
-                            <span class="conditions">Conditions</span>
-                            <span class="temp">--<span class="celsius">°C</span>/<span class="fahrenheit">°F</span></span>
+                            <span class="temp">34°</span>
                         </div>
                         <div class="forecast-item">
-                            <span class="time">6 PM</span>
+                            <span class="time">6:00 PM</span>
                             <div class="weather-icon">{Icon}</div>
-                            <span class="conditions">Conditions</span>
-                            <span class="temp">--<span class="celsius">°C</span>/<span class="fahrenheit">°F</span></span>
+                            <span class="temp">32°</span>
                         </div>
                         <div class="forecast-item">
-                            <span class="time">9 PM</span>
+                            <span class="time">9:00 PM</span>
                             <div class="weather-icon">{Icon}</div>
-                            <span class="conditions">Conditions</span>
-                            <span class="temp">--<span class="celsius">°C</span>/<span class="fahrenheit">°F</span></span>
+                            <span class="temp">30°</span>
                         </div>
                     </div>
                 </div>
                 <div class="air-conditions">
-                    <h4>Air Conditions <span class="see-more">See more</span></h4>
-                    <div class="condition">Real Feel: <span class="real-feel-temp">--</span><span class="celsius">°C</span>/<span class="fahrenheit">°F</span></div>
-                    <div class="condition">Wind: <span class="wind-speed">--</span> <span class="wind-units">km/h</span></div>
-                    <div class="condition">Chance of rain: <span class="rain-chance-detail">--</span>%</div>
-                    <div class="condition">UV Index: <span class="uv-index">#</span></div>
+                    <h4>AIR CONDITIONS <span class="see-more">See more</span></h4>
+                    <div class="condition">Real Feel <span class="real-feel-temp">30°</span></div>
+                    <div class="condition">Wind <span class="wind-speed">0.2</span> <span class="wind-units">km/h</span></div>
+                    <div class="condition">Chance of rain <span class="rain-chance-detail">0%</span></div>
+                    <div class="condition">UV Index <span class="uv-index">3</span></div>
                 </div>
                 <div class="more-conditions">
                     <div class="condition">Humidity: <span class="humidity">--</span>%</div>
@@ -264,55 +259,48 @@ s0.parentNode.insertBefore(s1,s0);
                     <div class="condition">Sunset: <span class="sunset-time">--:-- AM</span></div>
                 </div>
                 <div class="seven-day-forecast">
-                    <h4>7-Day Forecast</h4>
+                    <h4>7 - DAY FORECAST</h4>
                     <div class="daily-forecast">
                         <span class="day">Today</span>
                         <div class="weather-icon">{Icon}</div>
-                        <span class="conditions">Weather conditions</span>
-                        <span class="high-low">High/Low --<span class="celsius">°C</span>/<span class="fahrenheit">°F</span></span>
-                        <hr>
+                        <span class="conditions">Sunny</span>
+                        <span class="high-low">36/22</span>
                     </div>
                     <div class="daily-forecast">
                         <span class="day">Tue</span>
                         <div class="weather-icon">{Icon}</div>
-                        <span class="conditions">Weather conditions</span>
-                        <span class="high-low">High/Low --<span class="celsius">°C</span>/<span class="fahrenheit">°F</span></span>
-                        <hr>
+                        <span class="conditions">Sunny</span>
+                        <span class="high-low">37/21</span>
                     </div>
                     <div class="daily-forecast">
                         <span class="day">Wed</span>
                         <div class="weather-icon">{Icon}</div>
-                        <span class="conditions">Weather conditions</span>
-                        <span class="high-low">High/Low --<span class="celsius">°C</span>/<span class="fahrenheit">°F</span></span>
-                        <hr>
+                        <span class="conditions">Sunny</span>
+                        <span class="high-low">37/21</span>
                     </div>
                     <div class="daily-forecast">
                         <span class="day">Thu</span>
                         <div class="weather-icon">{Icon}</div>
-                        <span class="conditions">Weather conditions</span>
-                        <span class="high-low">High/Low --<span class="celsius">°C</span>/<span class="fahrenheit">°F</span></span>
-                        <hr>
+                        <span class="conditions">Cloudy</span>
+                        <span class="high-low">37/21</span>
                     </div>
                     <div class="daily-forecast">
                         <span class="day">Fri</span>
                         <div class="weather-icon">{Icon}</div>
-                        <span class="conditions">Weather conditions</span>
-                        <span class="high-low">High/Low --<span class="celsius">°C</span>/<span class="fahrenheit">°F</span></span>
-                        <hr>
+                        <span class="conditions">Cloudy</span>
+                        <span class="high-low">37/21</span>
                     </div>
                     <div class="daily-forecast">
                         <span class="day">Sat</span>
                         <div class="weather-icon">{Icon}</div>
-                        <span class="conditions">Weather conditions</span>
-                        <span class="high-low">High/Low --<span class="celsius">°C</span>/<span class="fahrenheit">°F</span></span>
-                        <hr>
+                        <span class="conditions">Rainy</span>
+                        <span class="high-low">37/21</span>
                     </div>
                     <div class="daily-forecast">
                         <span class="day">Sun</span>
                         <div class="weather-icon">{Icon}</div>
-                        <span class="conditions">Weather conditions</span>
-                        <span class="high-low">High/Low --<span class="celsius">°C</span>/<span class="fahrenheit">°F</span></span>
-                        <hr>
+                        <span class="conditions">Sunny</span>
+                        <span class="high-low">37/21</span>
                     </div>
                 </div>
             </div>
@@ -325,34 +313,58 @@ s0.parentNode.insertBefore(s1,s0);
                     <div class="city-item">
                         <div class="weather-icon">{Icon}</div>
                         <div class="city-info">
-                            <h4 class="city-name">City, ST</h4>
-                            <span class="time">--:-- AM</span>
+                            <h4 class="city-name">Bilbao</h4>
+                            <span class="time">10:23</span>
                         </div>
-                        <span class="temp">--<span class="celsius">°C</span>/<span class="fahrenheit">°F</span></span>
+                        <span class="temp">27°</span>
+                    </div>
+                    <div class="city-item">
+                        <div class="weather-icon">{Icon}</div>
+                        <div class="city-info">
+                            <h4 class="city-name">Barcelona</h4>
+                            <span class="time">10:23</span>
+                        </div>
+                        <span class="temp">29°</span>
+                    </div>
+                    <div class="city-item selected">
+                        <div class="weather-icon">{Icon}</div>
+                        <div class="city-info">
+                            <h4 class="city-name">Madrid</h4>
+                            <span class="time">10:23</span>
+                        </div>
+                        <span class="temp">31°</span>
+                    </div>
+                    <div class="city-item">
+                        <div class="weather-icon">{Icon}</div>
+                        <div class="city-info">
+                            <h4 class="city-name">Malaga</h4>
+                            <span class="time">10:23</span>
+                        </div>
+                        <span class="temp">33°</span>
                     </div>
                     </div>
                 <div class="selected-city-details">
-                    <h3 class="city-state">City, ST</h3>
-                    <p>Chance of rain: <span class="rain-chance">---%</span></p>
-                    <p><span class="temperature">---</span><span class="celsius">°C</span>/<span class="fahrenheit">°F</span></p>
+                    <h3 class="city-state">Madrid</h3>
+                    <p>Chance of rain: <span class="rain-chance">0%</span></p>
+                    <p><span class="temperature">31</span>°</p>
                     <div class="weather-icon large">{Icon}</div>
                     <hr>
                     <h4>Today's Forecast</h4>
                     <div class="forecast-times">
                         <div class="forecast-item">
-                            <span class="time">6 AM</span>
+                            <span class="time">6:00 AM</span>
                             <div class="weather-icon">{Icon}</div>
-                            <span class="temp">---<span class="celsius">°C</span>/<span class="fahrenheit">°F</span></span>
+                            <span class="temp">25°</span>
                         </div>
                         <div class="forecast-item">
-                            <span class="time">9 AM</span>
+                            <span class="time">9:00 AM</span>
                             <div class="weather-icon">{Icon}</div>
-                            <span class="temp">---<span class="celsius">°C</span>/<span class="fahrenheit">°F</span></span>
+                            <span class="temp">28°</span>
                         </div>
                         <div class="forecast-item">
-                            <span class="time">12 PM</span>
+                            <span class="time">12:00 PM</span>
                             <div class="weather-icon">{Icon}</div>
-                            <span class="temp">---<span class="celsius">°C</span>/<span class="fahrenheit">°F</span></span>
+                            <span class="temp">33°</span>
                         </div>
                     </div>
                     <hr>
@@ -361,17 +373,17 @@ s0.parentNode.insertBefore(s1,s0);
                         <div class="daily-forecast">
                             <span class="day">Today</span>
                             <div class="weather-icon">{Icon}</div>
-                            <span class="high-low">High/Low ---<span class="celsius">°C</span>/<span class="fahrenheit">°F</span></span>
+                            <span class="high-low">36/22</span>
                         </div>
                         <div class="daily-forecast">
-                            <span class="day">Tomorrow</span>
+                            <span class="day">Tue</span>
                             <div class="weather-icon">{Icon}</div>
-                            <span class="high-low">High/Low ---<span class="celsius">°C</span>/<span class="fahrenheit">°F</span></span>
+                            <span class="high-low">37/21</span>
                         </div>
                         <div class="daily-forecast">
-                            <span class="day">Day After</span>
+                            <span class="day">Wed</span>
                             <div class="weather-icon">{Icon}</div>
-                            <span class="high-low">High/Low ---<span class="celsius">°C</span>/<span class="fahrenheit">°F</span></span>
+                            <span class="high-low">37/21</span>
                         </div>
                     </div>
                 </div>
@@ -426,8 +438,8 @@ s0.parentNode.insertBefore(s1,s0);
                         <div class="unit-options">
                             <span class="unit">hPa</span>
                             <span class="unit">Inches</span>
-                            <span class="unit active">kPa</span>
-                            <span class="unit">mm</span>
+                            <span class="unit">kPa</span>
+                            <span class="unit active">mm</span>
                         </div>
                     </div>
                     <div class="unit-group">
