--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.10/css/weather-icons.min.css">
-
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+          integrity="sha256-eCaCGRE6XYWjCDhLMQLCJamT9mr3CWUyWXmeEvCnFA=="
+          crossorigin=""/>
     
     <!-- Font Awesome CDN -->
     <script src="https://kit.fontawesome.com/ffa5e5607e.js" crossorigin="anonymous"></script>
@@ -1026,5 +1028,8 @@ s0.parentNode.insertBefore(s1,s0);
     <script src="business-hours.js"></script>
     <script src="main.js"></script>
     <script src="admin.js"></script>
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+            integrity="sha256-20nQCkoGXLKEW/Hg/rrU7mccJKgzNVqbqR8lS8JavRpg=="
+            crossorigin=""></script>
 </body>
 </html>                
