--- a/index.html
+++ b/index.html
@@ -191,43 +191,41 @@ s0.parentNode.insertBefore(s1,s0);
             </div>
         </section>
 
- <div class="weather-widget">
-        <div class="tabs">
-            <button class="tab-button active" data-tab="weather">Weather</button>
-            <button class="tab-button" data-tab="cities">Cities</button>
-            <button class="tab-button" data-tab="map">Map</button>
-            <button class="tab-button" data-tab="settings">Settings</button>
+ <div class="weather-widget glass-panel">
+        <div class="widget-sidebar">
+            <ul class="widget-tabs">
+                <li><button class="tab-button active" data-tab="weather"><i class="fas fa-sun"></i> Weather</button></li>
+                <li><button class="tab-button" data-tab="cities"><i class="fas fa-city"></i> Cities</button></li>
+                <li><button class="tab-button" data-tab="map"><i class="fas fa-map-marked-alt"></i> Map</button></li>
+                <li><button class="tab-button" data-tab="settings"><i class="fas fa-cog"></i> Settings</button></li>
+            </ul>
         </div>
-        <div class="tab-content">
+        <div class="widget-content">
             <div id="weather" class="tab-panel active">
-                <h3>Weather in <span class="city-state">City, State</span></h3>
-                <div class="weather-search">
-                    <input type="text" placeholder="Enter a City or Zip Code">
-                </div>
+                <input type="text" class="weather-search" placeholder="Enter a City or Zip Code">
                 <div class="current-weather">
-                    <div class="main-info">
-                        <span class="temperature">-- °C/°F</span>
-                        <div class="weather-icon large">{Icon}</div>
-                        <span class="rain-chance">Chance of rain: --%</span>
+                    <div>
+                        <h3 class="city-state">City, State</h3>
+                        <p><span class="temperature">-- °C/°F</span></p>
+                        <p class="rain-chance">Chance of rain: --%</p>
                     </div>
-                    <div class="today-forecast">
-                        <h4>Today's Forecast</h4>
-                        <div class="forecast-times">
-                            <!-- Hourly forecast items will go here -->
-                        </div>
+                    <div class="weather-icon large">{Icon}</div>
+                </div>
+                <div class="today-forecast">
+                    <h4>Today's Forecast</h4>
+                    <div class="forecast-times">
+                        <!-- Hourly forecast items will go here -->
                     </div>
-                    <div class="air-conditions">
-                        <h4>Air Conditions <a href="#" class="see-more">See more</a></h4>
-                        <div class="conditions-summary">
-                            <div class="condition-item">Real Feel: <span class="real-feel-temp">-- °C/°F</span></div>
-                            <div class="condition-item">Wind: <span class="wind-speed">--</span> <span class="wind-units">km/h</span></div>
-                            <div class="condition-item">Chance of rain: <span class="rain-chance-detail">--%</span></div>
-                            <div class="condition-item">UV Index: <span class="uv-index">--</span></div>
-                        </div>
-                        <div class="more-conditions">
-                            <!-- More detailed conditions can go here if available -->
-                        </div>
-                    </div>
+                </div>
+                <div class="air-conditions">
+                    <h4>Air Conditions <a href="#" class="see-more">See more</a></h4>
+                    <div class="condition">Real Feel: <span class="real-feel-temp">-- °C/°F</span></div>
+                    <div class="condition">Wind: <span class="wind-speed">--</span> <span class="wind-units">km/h</span></div>
+                    <div class="condition">Chance of rain: <span class="rain-chance-detail">--%</span></div>
+                    <div class="condition">UV Index: <span class="uv-index">--</span></div>
+                </div>
+                <div class="more-conditions">
+                    <!-- More detailed conditions can go here if available -->
                 </div>
                 <div class="seven-day-forecast">
                     <h4>7 - DAY FORECAST</h4>
@@ -235,80 +233,101 @@ s0.parentNode.insertBefore(s1,s0);
                 </div>
             </div>
             <div id="cities" class="tab-panel">
-                <h3>Manage Cities</h3>
-                <div class="cities-search">
-                    <input type="text" placeholder="Search for cities">
-                </div>
-                <div class="cities-container">
+                <input type="text" class="cities-search" placeholder="Search for cities">
+                <div style="display: flex; gap: 20px;">
                     <div class="added-cities">
                         <!-- List of added cities will go here -->
                     </div>
                     <div class="selected-city-details">
-                        <h3>City Name, State</h3>
-                        <div class="main-info">
-                            <span class="temperature">-- °C/°F</span>
-                            <div class="weather-icon large">{Icon}</div>
-                            <span class="rain-chance">Chance of rain: --%</span>
+                        <h3 class="city-state">City Name, State</h3>
+                        <p><span class="temperature">-- °C/°F</span> <span class="weather-icon large">{Icon}</span></p>
+                        <p class="rain-chance">Chance of rain: --%</p>
+                        <hr>
+                        <h4>Today's Forecast</h4>
+                        <div class="forecast-times">
+                            <!-- Hourly forecast for selected city -->
                         </div>
-                        <div class="today-forecast">
-                            <h4>Today's Forecast</h4>
-                            <div class="forecast-times">
-                                <!-- Hourly forecast for selected city -->
-                            </div>
-                        </div>
+                        <hr>
+                        <h4>3-Day Forecast</h4>
                         <div class="three-day-forecast">
-                            <h4>3-Day Forecast</h4>
                             <!-- 3-day forecast for selected city -->
                         </div>
                     </div>
                 </div>
             </div>
             <div id="map" class="tab-panel">
-                <h3>Live Weather Map</h3>
-                <div id="weather-map">
+                <input type="text" class="map-search" placeholder="Search for a location">
+                <div class="weather-map">
                     <div class="map-controls">
                         <button>+</button>
                         <button>-</button>
                         <button class="current-location-button">Current Location</button>
                     </div>
-                </div>
-                <div class="map-search">
-                    <input type="text" placeholder="Search for a location">
+                    <!-- Map will be initialized here by JavaScript -->
                 </div>
                 <div class="cities-on-map">
                     <!-- List of cities on the map could go here -->
                 </div>
             </div>
             <div id="settings" class="tab-panel">
-                <h3>Settings</h3>
-                <div class="units">
-                    <h4>Units</h4>
-                    <div class="unit-options">
-                        <button class="unit active">Temperature Celsius</button>
-                        <button class="unit">Temperature Fahrenheit</button>
-                        <button class="unit">Wind Speed km/h</button>
-                        <button class="unit">Wind Speed m/s</button>
-                        <button class="unit">Wind Speed Knots</button>
-                        <button class="unit">Pressure hPa</button>
-                        <button class="unit">Pressure Inches</button>
-                        <button class="unit">Pressure kPa</button>
-                        <button class="unit">Pressure mm</button>
-                        <button class="unit">Precipitation Milimeters</button>
-                        <button class="unit">Precipitation Inches</button>
-                        <button class="unit">Distance Kilometers</button>
-                        <button class="unit">Distance Miles</button>
+                <input type="text" class="settings-search" placeholder="Search settings">
+                <div class="units-settings">
+                    <h3>Units</h3>
+                    <div class="unit-group">
+                        <h4>Temperature</h4>
+                        <div class="unit-options">
+                            <button class="unit active">Celsius</button>
+                            <button class="unit">Fahrenheit</button>
+                        </div>
+                    </div>
+                    <div class="unit-group">
+                        <h4>Wind Speed</h4>
+                        <div class="unit-options">
+                            <button class="unit active">km/h</button>
+                            <button class="unit">m/s</button>
+                            <button class="unit">Knots</button>
+                        </div>
+                    </div>
+                    <div class="unit-group">
+                        <h4>Pressure</h4>
+                        <div class="unit-options">
+                            <button class="unit active">hPa</button>
+                            <button class="unit">Inches</button>
+                            <button class="unit">kPa</button>
+                            <button class="unit">mm</button>
+                        </div>
+                    </div>
+                    <div class="unit-group">
+                        <h4>Precipitation</h4>
+                        <div class="unit-options">
+                            <button class="unit active">Milimeters</button>
+                            <button class="unit">Inches</button>
+                        </div>
+                    </div>
+                    <div class="unit-group">
+                        <h4>Distance</h4>
+                        <div class="unit-options">
+                            <button class="unit active">Kilometers</button>
+                            <button class="unit">Miles</button>
+                        </div>
                     </div>
                 </div>
                 <div class="general-settings">
-                    <h4>General</h4>
+                    <h3>General</h3>
                     <div class="setting-item">
-                        <label for="time-format">12-Hour Time</label>
-                        <input type="checkbox" id="time-format">
+                        <span class="setting-label">12-Hour Time</span>
+                        <label class="switch">
+                            <input type="checkbox" id="time-format">
+                            <span class="slider round"></span>
+                        </label>
                     </div>
                     <div class="setting-item">
-                        <label for="location-services">Location</label>
-                        <input type="checkbox" id="location-services" checked>
-                        <small>Get weather of your location</small>
+                        <span class="setting-label">Location</span>
+                        <label class="switch">
+                            <input type="checkbox" id="location-services" checked>
+                            <span class="slider round"></span>
+                        </label>
+                        <div class="setting-description">Get weather of your location</div>
                     </div>
                     <!-- Add other settings here if needed -->
                 </div>
