--- a/weather.html
+++ b/weather.html
@@ -23,7 +23,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600&display=swap" rel="stylesheet">
     
-    <link rel="stylesheet" href="assest/css/style.css">
+    <link rel="stylesheet" href="assest/css/weather-style.css">
 
     <script type="module" src="./assest/js/app.js"></script>
     <script type="module" src="./assest/js/route.js"></script>
