--- a/index.html
+++ b/index.html
@@ -97,20 +97,15 @@ s0.parentNode.insertBefore(s1,s0);
 
   <!-- Profile Section -->
 <div class="profile-section">
-    <div class="profile-pic-wrapper">
-        <!-- Merch Button -->
-        <button class="merch-button" aria-label="Merch" onclick="window.location.href='https://bus-army-dude.github.io/bus-army-dude/merchandise.html'"></button>
+    <button class="merch-button" aria-label="Merch" onclick="window.location.href='https://bus-army-dude.github.io/bus-army-dude/merchandise.html'"></button>
 
-        <!-- Settings Button -->
-        <button class="settings-button" aria-label="Settings" onclick="window.location.href='settings.html'"></button>
-        
-        <!-- Profile Picture -->
+    <button class="settings-button" aria-label="Settings" onclick="window.location.href='settings.html'"></button>
+
+    <div class="profile-pic-wrapper">
         <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
-        
-        <!-- Profile Status Circle (half in, half out) -->
+
         <div class="profile-status-container">
-            <span class="profile-status">🟢</span> <!-- This status will update dynamically -->
-        </div>
+            <span class="profile-status">🟢</span> </div>
     </div>
 
     <div class="username-checkmark">
