--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="ai-features.css">
     <link rel="stylesheet" href="settings.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     
     <!-- Font Awesome CDN -->
     <script src="https://kit.fontawesome.com/ffa5e5607e.js" crossorigin="anonymous"></script>
@@ -133,7 +133,7 @@ s0.parentNode.insertBefore(s1,s0);
             <span>Snapchat</span>
         </a>
         <a href="https://x.com/KritzarRiver" class="social-button">
-            <i class="fab fa-x social-icon"></i>
+            <i class="fab fa-twitter social-icon"></i> <!-- Updated to Twitter logo -->
             <span>X (Twitter)</span>
         </a>
         <a href="https://m.twitch.tv/BusArmyDude" class="social-button">
@@ -160,12 +160,8 @@ s0.parentNode.insertBefore(s1,s0);
             <i class="fab fa-threads social-icon"></i>
             <span>Threads</span>
         </a>
-        <a href="https://bsky.app/profile/busarmydude.bsky.social" class="social-button">
-            <i class="fa-brands fa-bluesky social-icon"></i>
-            <span>Bluesky</span>
-        </a>
         <a href="https://music.youtube.com/@BusArmyDude" class="social-button">
-            <i class="fa-brands fa-square-youtube social-icon"></i>
+            <i class="fab fa-youtube social-icon"></i> <!-- YouTube Music logo -->
             <span>YouTube Music</span>
         </a>
     </div>
