--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ s0.parentNode.insertBefore(s1,s0);
             <span>Snapchat</span>
         </a>
         <a href="https://x.com/KritzarRiver" class="social-button">
-            <i class="fab fa-x-twitter social-icon"></i> <!-- Updated for Twitter's new logo -->
+            <i class="social-icon" style="font-family: 'Font Awesome 6 Free'; content: '\e61b';"></i>
             <span>X (Twitter)</span>
         </a>
         <a href="https://m.twitch.tv/BusArmyDude" class="social-button">
@@ -157,7 +157,7 @@ s0.parentNode.insertBefore(s1,s0);
             <span>Instagram</span>
         </a>
         <a href="https://www.threads.net/@busarmydude" class="social-button">
-            <i class="fa-brands fa-threads social-icon"></i> <!-- Updated for Threads logo -->
+            <i class="social-icon" style="font-family: 'Font Awesome 6 Free'; content: '\e61b';"></i>
             <span>Threads</span>
         </a>
         <a href="https://music.youtube.com/@BusArmyDude" class="social-button">
