--- a/index.html
+++ b/index.html
@@ -132,9 +132,15 @@ s0.parentNode.insertBefore(s1,s0);
             <i class="fab fa-snapchat-ghost social-icon"></i>
             <span>Snapchat</span>
         </a>
+        <!-- X (Twitter) -->
         <a href="https://x.com/KritzarRiver" class="social-button">
-            <i class="social-icon" style="font-family: 'Font Awesome 6 Free'; content: '\e61b';"></i>
+            <i class="fab fa-x-twitter social-icon"></i>
             <span>X (Twitter)</span>
+        </a>
+        <!-- Threads -->
+        <a href="https://www.threads.net/@busarmydude" class="social-button">
+            <i class="fab fa-threads social-icon"></i>
+            <span>Threads</span>
         </a>
         <a href="https://m.twitch.tv/BusArmyDude" class="social-button">
             <i class="fab fa-twitch social-icon"></i>
@@ -157,15 +163,16 @@ s0.parentNode.insertBefore(s1,s0);
             <span>Instagram</span>
         </a>
         <a href="https://www.threads.net/@busarmydude" class="social-button">
-            <i class="social-icon" style="font-family: 'Font Awesome 6 Free'; content: '\e61b';"></i>
+            <i class="fab fa-threads social-icon"></i>
             <span>Threads</span>
         </a>
         <a href="https://music.youtube.com/@BusArmyDude" class="social-button">
-            <i class="fab fa-youtube social-icon"></i> <!-- YouTube Music logo -->
+            <i class="fab fa-square-youtube social-icon"></i>
             <span>YouTube Music</span>
         </a>
     </div>
 </div>
+
         
         <!-- Current President -->        
         <section id="current-president" class="president-section">
