--- a/index.html
+++ b/index.html
@@ -200,11 +200,9 @@ s0.parentNode.insertBefore(s1,s0);
         <div class="shoutouts-section section">
             <div id="instagram-shoutouts">
                 <h2>Instagram Creator Shoutouts</h2>
-                <p class="last-updated"><span id="instagram-last-updated-timestamp">N/A</span></p>
-            </div>
+                <p class="last-updated"><span id="lastUpdatedInstagram">N/A</span></p>  </div>
             <div class="instagram-creator-grid">
-                <!-- Instagram creator cards will be dynamically generated here -->
-            </div>
+                </div>
         </div>
 
         <!-- YouTube Shoutouts Section -->
