--- a/index.html
+++ b/index.html
@@ -95,8 +95,7 @@ s0.parentNode.insertBefore(s1,s0);
     <p><strong>Thank you for your understanding!</strong></p>
 </div>
 
-  <!-- Profile Section -->
-<div class="profile-section">
+  <div class="profile-section">
     <button class="merch-button" aria-label="Merch" onclick="window.location.href='https://bus-army-dude.github.io/bus-army-dude/merchandise.html'"></button>
 
     <button class="settings-button" aria-label="Settings" onclick="window.location.href='settings.html'"></button>
@@ -105,7 +104,8 @@ s0.parentNode.insertBefore(s1,s0);
         <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
 
         <div class="profile-status-container">
-            <span class="profile-status">🟢</span> </div>
+            <span class="profile-status">🟢</span>
+        </div>
     </div>
 
     <div class="username-checkmark">
@@ -114,6 +114,8 @@ s0.parentNode.insertBefore(s1,s0);
     </div>
     <p>CURRENT PRESIDENT: Trump (2025-2029)</p>
     <p>POLITICAL PARTY: Republican</p>
+
+    <button class="weather-button" aria-label="Weather" onclick="window.location.href='weather.html'"></button>
 </div>
         
        <!-- Social Links Section -->
