--- a/weather.html
+++ b/weather.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="light">
+<html lang="en" data-theme="dark">
 <head>
     <title>weatherio</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="weatherio">
-    <meta name="description" content="Explore accurate and real-time weather information for cities around the world with Weatherio. Get current weather conditions, 5-day forecasts, wind speed, sunrise and sunset times, air quality, humidity, and more. Stay informed about weather changes effortlessly. Visit Weatherio now!">
+    <meta name="description" content="Explore accurate and real-time weather information for cities around the world with Weatherio. Get current weather conditions, 5-day forecasts, wind speed, sunrise and sunset times, air quality, humidity, and more.">
     
     <link rel="shortcut icon" href="favicon.svg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,7 +24,7 @@
             </a>
             <div class="search-view" data-search-view>
                 <div class="search-wrapper">
-                    <input type="search" name="search" class="search-field" placeholder="search city ..." autocomplete="off" data-search-field>
+                    <input type="search" name="search" class="search-field" placeholder="Search city..." autocomplete="off" data-search-field>
                     <span class="m-icon leading-icon">search</span>
                     <button class="icon-btn leading-icon has-state" aria-label="close search" data-search-toggler>
                         <span class="m-icon">arrow_back</span>
@@ -42,11 +42,6 @@
                     <span class="m-icon">settings</span>
                     <span class="span">Settings</span>
                 </button>
-
-                <a href="index.html" class="btn-primary has-state" data-home-btn>
-                    <span class="m-icon">home</span>
-                    <span class="span">Home</span>
-                </a>
 
                 <button class="icon-btn has-state" aria-label="open search" data-search-toggler>
                     <span class="m-icon">search</span>
@@ -71,97 +66,74 @@
 
     <!-- Settings Modal -->
     <div class="settings-modal" data-settings-modal>
-        <div class="settings-content">
-            <h2 class="title-2">Weather Settings</h2>
+        <div class="settings-content card">
+            <h2 class="title-2">Settings</h2>
             
             <div class="settings-sections">
-                <!-- Units Section -->
+                <!-- Temperature Units -->
                 <div class="settings-section">
-                    <div class="settings-dropdown">
-                        <button class="dropdown-btn" data-units-dropdown>
-                            <span>Units</span>
-                            <span class="m-icon">expand_more</span>
-                        </button>
-                        <div class="dropdown-content">
-                            <!-- Temperature -->
-                            <div class="settings-group">
-                                <h3 class="title-3">Temperature</h3>
-                                <select class="settings-select" data-settings-temp>
-                                    <option value="celsius">Celsius (°C)</option>
-                                    <option value="fahrenheit">Fahrenheit (°F)</option>
-                                    <option value="kelvin">Kelvin (K)</option>
-                                </select>
+                    <h3 class="title-3">Temperature</h3>
+                    <select class="settings-select" data-settings-temp>
+                        <option value="celsius">Celsius (°C)</option>
+                        <option value="fahrenheit">Fahrenheit (°F)</option>
+                        <option value="kelvin">Kelvin (K)</option>
+                    </select>
+                </div>
+
+                <!-- Wind Speed Units -->
+                <div class="settings-section">
+                    <h3 class="title-3">Wind Speed</h3>
+                    <select class="settings-select" data-settings-speed>
+                        <option value="ms">Meters per second (m/s)</option>
+                        <option value="mph">Miles per hour (mph)</option>
+                        <option value="kph">Kilometers per hour (km/h)</option>
+                        <option value="knots">Knots (kts)</option>
+                        <option value="beaufort">Beaufort scale</option>
+                    </select>
+                </div>
+
+                <!-- Pressure Units -->
+                <div class="settings-section">
+                    <h3 class="title-3">Pressure</h3>
+                    <select class="settings-select" data-settings-pressure>
+                        <option value="hpa">Hectopascals (hPa)</option>
+                        <option value="inhg">Inches of Mercury (inHg)</option>
+                        <option value="mmhg">Millimeters of Mercury (mmHg)</option>
+                    </select>
+                </div>
+
+                <!-- Display Settings -->
+                <div class="settings-section">
+                    <h3 class="title-3">Display</h3>
+                    <div class="settings-options">
+                        <label class="setting-item">
+                            <span class="setting-label">Dark Mode</span>
+                            <div class="toggle-switch">
+                                <input type="checkbox" data-settings-theme>
+                                <span class="toggle-slider"></span>
                             </div>
-                            <!-- Wind Speed -->
-                            <div class="settings-group">
-                                <h3 class="title-3">Wind Speed</h3>
-                                <select class="settings-select" data-settings-speed>
-                                    <option value="ms">Meters per second (m/s)</option>
-                                    <option value="mph">Miles per hour (mph)</option>
-                                    <option value="kph">Kilometers per hour (km/h)</option>
-                                    <option value="knots">Knots (kts)</option>
-                                    <option value="beaufort">Beaufort scale</option>
-                                </select>
+                        </label>
+                        <label class="setting-item">
+                            <span class="setting-label">24-hour Time</span>
+                            <div class="toggle-switch">
+                                <input type="checkbox" data-settings-time>
+                                <span class="toggle-slider"></span>
                             </div>
-                            <!-- Pressure -->
-                            <div class="settings-group">
-                                <h3 class="title-3">Pressure</h3>
-                                <select class="settings-select" data-settings-pressure>
-                                    <option value="hpa">Hectopascals (hPa)</option>
-                                    <option value="inhg">Inches of Mercury (inHg)</option>
-                                    <option value="mmhg">Millimeters of Mercury (mmHg)</option>
-                                </select>
-                            </div>
-                        </div>
+                        </label>
                     </div>
                 </div>
 
-                <!-- Display Section -->
+                <!-- Privacy Settings -->
                 <div class="settings-section">
-                    <div class="settings-dropdown">
-                        <button class="dropdown-btn" data-display-dropdown>
-                            <span>Display</span>
-                            <span class="m-icon">expand_more</span>
-                        </button>
-                        <div class="dropdown-content">
-                            <div class="settings-group">
-                                <label class="setting-item">
-                                    <span class="setting-label">Dark Mode</span>
-                                    <div class="toggle-switch">
-                                        <input type="checkbox" data-settings-theme>
-                                        <span class="toggle-slider"></span>
-                                    </div>
-                                </label>
-                                <label class="setting-item">
-                                    <span class="setting-label">24-hour Time</span>
-                                    <div class="toggle-switch">
-                                        <input type="checkbox" data-settings-time>
-                                        <span class="toggle-slider"></span>
-                                    </div>
-                                </label>
+                    <h3 class="title-3">Privacy</h3>
+                    <div class="settings-options">
+                        <label class="setting-item">
+                            <span class="setting-label">Location Services</span>
+                            <div class="toggle-switch">
+                                <input type="checkbox" checked data-settings-location>
+                                <span class="toggle-slider"></span>
                             </div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Privacy Section -->
-                <div class="settings-section">
-                    <div class="settings-dropdown">
-                        <button class="dropdown-btn" data-privacy-dropdown>
-                            <span>Privacy</span>
-                            <span class="m-icon">expand_more</span>
-                        </button>
-                        <div class="dropdown-content">
-                            <div class="settings-group">
-                                <label class="setting-item">
-                                    <span class="setting-label">Location Services</span>
-                                    <div class="toggle-switch">
-                                        <input type="checkbox" checked data-settings-location>
-                                        <span class="toggle-slider"></span>
-                                    </div>
-                                </label>
-                            </div>
-                        </div>
+                        </label>
                     </div>
                 </div>
             </div>
@@ -177,7 +149,7 @@
         </div>
     </div>
 
-    <!-- 404 Section -->
+    <!-- Error Section -->
     <section class="error-content" data-error-content>
         <h2 class="heading">404</h2>
         <p class="body-1">Page not found!</p>
