--- a/weather.html
+++ b/weather.html
@@ -15,6 +15,7 @@
 
     <script type="module" src="./assest/js/app.js"></script>
     <script type="module" src="./assest/js/route.js"></script>
+    <script type="module" src="./assest/js/settings.js"></script>
 </head>
 <body>
     <header class="header">
