--- a/weather.html
+++ b/weather.html
@@ -14,9 +14,9 @@
     <link rel="stylesheet" href="assest/css/weather-style.css">
     <link rel="stylesheet" href="assest/css/settings-style.css">
 
-    <script type="module" src="./assest/js/app.js"></script>
-    <script type="module" src="./assest/js/route.js"></script>
-    <script type="module" src="./assest/js/settings.js"></script>
+    <script type="module" src="assest/js/app.js"></script>
+    <script type="module" src="assest/js/route.js"></script>
+    <script type="module" src="assest/js/settings.js"></script>
 </head>
 <body>
     <header class="header">
